# FSLR

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: mediapipe.ipynb
src/: __init__.py  app.py  dataset.py  evaluate.py  live_static.py  model.py  predict.py  preprocess_static_images.py  preprocessing.py  static_preprocessing.py  train.py  train_static.py
