[project]
name = "fslr"
version = "0.1.0"
description = "Filipino Sign Language Recognition (AnsabI mo?) scaffold"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "ipykernel",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "pyttsx3>=2.99",
    "opencv-python>=4.13.0.92",
    "mediapipe==0.10.9",
    "scikit-learn>=1.7.2",
    "gradio>=5.31.0",
]

[project.optional-dependencies]
cpu = [
    "torch",
    "torchvision",
]
